factor into functions

--- a/causauloptim_py/IV_Scenario.ipynb
+++ b/causauloptim_py/IV_Scenario.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4c504e5b",
    "metadata": {},
    "outputs": [],
@@ -10,6 +10,8 @@
     "# user defined R installation\n",
     "import os\n",
     "os.environ['R_HOME'] = 'D:/Program Files/R-4.5.0' #path to your R installation\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -17,6 +19,10 @@
     "from rpy2.robjects import globalenv\n",
     "from rpy2.robjects.packages import importr\n",
     "from rpy2.robjects.vectors import FloatVector\n",
+    "\n",
+    "from causaloptim_python import run_experiment, extract_prob_dict\n",
+    "\n",
+    "\n",
     "\n",
     "# Load R packages\n",
     "#igraph = importr('igraph')\n",
@@ -34,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "0808ca22",
    "metadata": {},
    "outputs": [
@@ -64,6 +70,8 @@
     "p_Y = 1 / (1 + np.exp(-logit_Y))\n",
     "Y = np.random.binomial(1, p_Y)\n",
     "\n",
+    "df = pd.DataFrame({'Y': Y, 'X': X, 'Z': Z})\n",
+    "\n",
     "# Ground truth ATE\n",
     "logit_Y1 = -0.5 + beta_X * 1 + beta_U * U\n",
     "logit_Y0 = -0.5 + beta_X * 0 + beta_U * U\n",
@@ -79,6 +87,41 @@
    "metadata": {},
    "source": [
     "#### causaloptim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f273d121",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bounds: (<rpy2.robjects.vectors.FloatVector object at 0x000001762E670910> [14]\n",
+      "R classes: ('numeric',)\n",
+      "[-0.250000], <rpy2.robjects.vectors.FloatVector object at 0x000001762E671890> [14]\n",
+      "R classes: ('numeric',)\n",
+      "[0.450000])\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "graph_str = \"(Z -+ X, X -+ Y, Ur -+ X, Ur -+ Y)\"\n",
+    "leftside = [1, 0, 0, 0]\n",
+    "latent   = [0, 0, 0, 1]\n",
+    "nvals    = [2, 2, 2, 2]\n",
+    "rlconnect = [0, 0, 0, 0]\n",
+    "monotone = [0, 0, 0, 0]\n",
+    "\n",
+    "prob_dict = extract_prob_dict(df)\n",
+    "\n",
+    "\n",
+    "bounds = run_experiment(graph_str, leftside, latent, nvals, rlconnect, monotone, prob_dict)\n",
+    "print(\"Bounds:\", bounds)"
    ]
   },
   {
@@ -119,7 +162,235 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
+   "id": "4aca4420",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <span>ListVector with 10 elements.</span>\n",
+       "        <table>\n",
+       "        <tbody>\n",
+       "        \n",
+       "          <tr>\n",
+       "            <th>\n",
+       "            [no name]\n",
+       "            </th>\n",
+       "            <td>\n",
+       "            \n",
+       "        <span>FloatVector with 1 elements.</span>\n",
+       "        <table>\n",
+       "        <tbody>\n",
+       "          <tr>\n",
+       "          \n",
+       "            <td>\n",
+       "            4.000000\n",
+       "            </td>\n",
+       "          \n",
+       "          </tr>\n",
+       "        </tbody>\n",
+       "        </table>\n",
+       "        \n",
+       "            </td>\n",
+       "          </tr>\n",
+       "        \n",
+       "          <tr>\n",
+       "            <th>\n",
+       "            [no name]\n",
+       "            </th>\n",
+       "            <td>\n",
+       "            \n",
+       "        <span>BoolVector with 1 elements.</span>\n",
+       "        <table>\n",
+       "        <tbody>\n",
+       "          <tr>\n",
+       "          \n",
+       "            <td>\n",
+       "                   1\n",
+       "            </td>\n",
+       "          \n",
+       "          </tr>\n",
+       "        </tbody>\n",
+       "        </table>\n",
+       "        \n",
+       "            </td>\n",
+       "          </tr>\n",
+       "        \n",
+       "          <tr>\n",
+       "            <th>\n",
+       "            [no name]\n",
+       "            </th>\n",
+       "            <td>\n",
+       "            \n",
+       "        <span>FloatVector with 4 elements.</span>\n",
+       "        <table>\n",
+       "        <tbody>\n",
+       "          <tr>\n",
+       "          \n",
+       "            <td>\n",
+       "            0.000000\n",
+       "            </td>\n",
+       "          \n",
+       "            <td>\n",
+       "            1.000000\n",
+       "            </td>\n",
+       "          \n",
+       "            <td>\n",
+       "            3.000000\n",
+       "            </td>\n",
+       "          \n",
+       "            <td>\n",
+       "            3.000000\n",
+       "            </td>\n",
+       "          \n",
+       "          </tr>\n",
+       "        </tbody>\n",
+       "        </table>\n",
+       "        \n",
+       "            </td>\n",
+       "          </tr>\n",
+       "        \n",
+       "          <tr>\n",
+       "            <th>\n",
+       "            ...\n",
+       "            </th>\n",
+       "            <td>\n",
+       "            ...\n",
+       "            </td>\n",
+       "          </tr>\n",
+       "        \n",
+       "          <tr>\n",
+       "            <th>\n",
+       "            [no name]\n",
+       "            </th>\n",
+       "            <td>\n",
+       "            <rpy2.rinterface_lib.sexp.NULLType object at 0x00000138BCC6B450> [0]\n",
+       "            </td>\n",
+       "          </tr>\n",
+       "        \n",
+       "          <tr>\n",
+       "            <th>\n",
+       "            [no name]\n",
+       "            </th>\n",
+       "            <td>\n",
+       "            \n",
+       "        <span>ListVector with 4 elements.</span>\n",
+       "        <table>\n",
+       "        <tbody>\n",
+       "        \n",
+       "          <tr>\n",
+       "            <th>\n",
+       "            [no name]\n",
+       "            </th>\n",
+       "            <td>\n",
+       "            <rpy2.rinterface.FloatSexpVector object at 0x00000138C5F0D190> [14]\n",
+       "            </td>\n",
+       "          </tr>\n",
+       "        \n",
+       "          <tr>\n",
+       "            <th>\n",
+       "            [no name]\n",
+       "            </th>\n",
+       "            <td>\n",
+       "            <rpy2.rinterface.ListSexpVector object at 0x00000138C5F0FDD0> [19]\n",
+       "            </td>\n",
+       "          </tr>\n",
+       "        \n",
+       "          <tr>\n",
+       "            <th>\n",
+       "            [no name]\n",
+       "            </th>\n",
+       "            <td>\n",
+       "            <rpy2.rinterface.ListSexpVector object at 0x00000138C5F0F9D0> [19]\n",
+       "            </td>\n",
+       "          </tr>\n",
+       "        \n",
+       "          <tr>\n",
+       "            <th>\n",
+       "            [no name]\n",
+       "            </th>\n",
+       "            <td>\n",
+       "            <rpy2.rinterface.ListSexpVector object at 0x00000138C5F0FAD0> [19]\n",
+       "            </td>\n",
+       "          </tr>\n",
+       "        \n",
+       "        </tbody>\n",
+       "        </table>\n",
+       "        \n",
+       "            </td>\n",
+       "          </tr>\n",
+       "        \n",
+       "          <tr>\n",
+       "            <th>\n",
+       "            [no name]\n",
+       "            </th>\n",
+       "            <td>\n",
+       "            <environment: 0x00000138c30aee18>\n",
+       "\n",
+       "            </td>\n",
+       "          </tr>\n",
+       "        \n",
+       "        </tbody>\n",
+       "        </table>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<rpy2.robjects.vectors.ListVector object at 0x00000138C5F25FD0> [19]\n",
+       "R classes: ('igraph',)\n",
+       "[FloatSexp..., BoolSexpV..., FloatSexp..., FloatSexp..., ..., NULLType, NULLType, ListSexpV..., SexpEnvir...]\n",
+       "  <no name>: <class 'rpy2.robjects.vectors.FloatVector'>\n",
+       "  <rpy2.robjects.vectors.FloatVector object at 0x00000138C74DA750> [14]\n",
+       "R classes: ('numeric',)\n",
+       "[4.000000]\n",
+       "  <no name>: <class 'rpy2.robjects.vectors.BoolVector'>\n",
+       "  <rpy2.robjects.vectors.BoolVector object at 0x00000138C5F250D0> [10]\n",
+       "R classes: ('logical',)\n",
+       "[       1]\n",
+       "  <no name>: <class 'rpy2.robjects.vectors.FloatVector'>\n",
+       "  <rpy2.robjects.vectors.FloatVector object at 0x00000138C5F0FA50> [14]\n",
+       "R classes: ('numeric',)\n",
+       "[0.000000, 1.000000, 3.000000, 3.000000]\n",
+       "  <no name>: <class 'rpy2.robjects.vectors.FloatVector'>\n",
+       "  <rpy2.robjects.vectors.FloatVector object at 0x00000138C5F0F250> [14]\n",
+       "R classes: ('numeric',)\n",
+       "[1.000000, 2.000000, 1.000000, 2.000000]\n",
+       "...\n",
+       "  <no name>: <class 'rpy2.rinterface_lib.sexp.NULLType'>\n",
+       "  <rpy2.rinterface_lib.sexp.NULLType object at 0x00000138BCC6B450> [0]\n",
+       "  <no name>: <class 'rpy2.rinterface_lib.sexp.NULLType'>\n",
+       "  <rpy2.rinterface_lib.sexp.NULLType object at 0x00000138BCC6B450> [0]\n",
+       "<rpy2.robjects.vectors.ListVector object at 0x00000138C5F25FD0> [19]\n",
+       "R classes: ('igraph',)\n",
+       "[FloatSexp..., BoolSexpV..., FloatSexp..., FloatSexp..., ..., NULLType, NULLType, ListSexpV..., SexpEnvir...]\n",
+       "  <no name>: <class 'rpy2.robjects.environments.Environment'>\n",
+       "  <rpy2.robjects.environments.Environment object at 0x00000138C5F0F750> [4]\n",
+       "R classes: ('environment',)\n",
+       "n items: 4"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "graph = define_graph(\n",
+    "    graph_str=\"(Z -+ X, X -+ Y, Ur -+ X, Ur -+ Y)\",\n",
+    "    leftside=[1, 0, 0, 0],\n",
+    "    latent=[0, 0, 0, 1],\n",
+    "    nvals=[2, 2, 2, 2],\n",
+    "    rlconnect=[0, 0, 0, 0],\n",
+    "    monotone=[0, 0, 0, 0]\n",
+    ")\n",
+    "graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "176e4013",
    "metadata": {},
    "outputs": [
@@ -127,9 +398,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bounds from causaloptim: [<rpy2.robjects.vectors.FloatVector object at 0x00000138C7580D50> [14]\n",
+      "Bounds from causaloptim: [<rpy2.robjects.vectors.FloatVector object at 0x00000138C5F0C6D0> [14]\n",
       "R classes: ('numeric',)\n",
-      "[-0.159200], <rpy2.robjects.vectors.FloatVector object at 0x00000138C7582FD0> [14]\n",
+      "[-0.159200], <rpy2.robjects.vectors.FloatVector object at 0x00000138C5F0DE50> [14]\n",
       "R classes: ('numeric',)\n",
       "[0.519600]]\n"
      ]
@@ -141,13 +412,7 @@
     "library(causaloptim)\n",
     "library(igraph)\n",
     "\n",
-    "# Define the DAG\n",
-    "graph <- graph_from_literal(Z -+ X, X -+ Y, Ur -+ X, Ur -+ Y)\n",
-    "V(graph)$leftside <- c(1, 0, 0, 0)\n",
-    "V(graph)$latent   <- c(0, 0, 0, 1)\n",
-    "V(graph)$nvals    <- c(2, 2, 2, 2)\n",
-    "E(graph)$rlconnect     <- c(0, 0, 0, 0)\n",
-    "E(graph)$edge.monotone <- c(0, 0, 0, 0)\n",
+    "\n",
     "\n",
     "# Analyze causal effect\n",
     "riskdiff <- \"p{Y(X = 1) = 1} - p{Y(X = 0) = 1}\"\n",
