--- a/causauloptim_py/IV_Scenario.ipynb
+++ b/causauloptim_py/IV_Scenario.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "4c504e5b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# user defined R installation\n",
     "import os\n",
@@ -40,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "0808ca22",
    "metadata": {},
    "outputs": [
@@ -91,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "f273d121",
    "metadata": {},
    "outputs": [
@@ -99,11 +108,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bounds: (<rpy2.robjects.vectors.FloatVector object at 0x000001762E670910> [14]\n",
+      "Bounds: (<rpy2.robjects.vectors.FloatVector object at 0x000001762E5585D0> [14]\n",
       "R classes: ('numeric',)\n",
-      "[-0.250000], <rpy2.robjects.vectors.FloatVector object at 0x000001762E671890> [14]\n",
+      "[-0.159200], <rpy2.robjects.vectors.FloatVector object at 0x000001762E559010> [14]\n",
       "R classes: ('numeric',)\n",
-      "[0.450000])\n"
+      "[0.519600])\n"
      ]
     }
    ],
@@ -122,319 +131,6 @@
     "\n",
     "bounds = run_experiment(graph_str, leftside, latent, nvals, rlconnect, monotone, prob_dict)\n",
     "print(\"Bounds:\", bounds)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "550c5ea4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create DataFrame\n",
-    "df = pd.DataFrame({'Y': Y, 'X': X, 'Z': Z})\n",
-    "\n",
-    "# Compute P(Y, X | Z) safely\n",
-    "joint_counts = df.groupby(['Y', 'X', 'Z']).size().reset_index(name='count')\n",
-    "z_counts = df['Z'].value_counts().to_dict()\n",
-    "joint_counts['p_yx_z'] = joint_counts.apply(\n",
-    "    lambda row: row['count'] / z_counts[row['Z']], axis=1\n",
-    ")\n",
-    "marg_dict = {\n",
-    "    (int(row.Y), int(row.X), int(row.Z)): row.p_yx_z\n",
-    "    for _, row in joint_counts.iterrows()\n",
-    "}\n",
-    "\n",
-    "# Helper to fetch probabilities with default fallback\n",
-    "def get_prob(y, x, z):\n",
-    "    return marg_dict.get((y, x, z), 0.0)\n",
-    "\n",
-    "# Assign to R using rpy2-compatible scalar format\n",
-    "globalenv[\"p00_0\"] = FloatVector([get_prob(0, 0, 0)])\n",
-    "globalenv[\"p10_0\"] = FloatVector([get_prob(1, 0, 0)])\n",
-    "globalenv[\"p01_0\"] = FloatVector([get_prob(0, 1, 0)])\n",
-    "globalenv[\"p11_0\"] = FloatVector([get_prob(1, 1, 0)])\n",
-    "globalenv[\"p00_1\"] = FloatVector([get_prob(0, 0, 1)])\n",
-    "globalenv[\"p10_1\"] = FloatVector([get_prob(1, 0, 1)])\n",
-    "globalenv[\"p01_1\"] = FloatVector([get_prob(0, 1, 1)])\n",
-    "globalenv[\"p11_1\"] = FloatVector([get_prob(1, 1, 1)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "4aca4420",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <span>ListVector with 10 elements.</span>\n",
-       "        <table>\n",
-       "        <tbody>\n",
-       "        \n",
-       "          <tr>\n",
-       "            <th>\n",
-       "            [no name]\n",
-       "            </th>\n",
-       "            <td>\n",
-       "            \n",
-       "        <span>FloatVector with 1 elements.</span>\n",
-       "        <table>\n",
-       "        <tbody>\n",
-       "          <tr>\n",
-       "          \n",
-       "            <td>\n",
-       "            4.000000\n",
-       "            </td>\n",
-       "          \n",
-       "          </tr>\n",
-       "        </tbody>\n",
-       "        </table>\n",
-       "        \n",
-       "            </td>\n",
-       "          </tr>\n",
-       "        \n",
-       "          <tr>\n",
-       "            <th>\n",
-       "            [no name]\n",
-       "            </th>\n",
-       "            <td>\n",
-       "            \n",
-       "        <span>BoolVector with 1 elements.</span>\n",
-       "        <table>\n",
-       "        <tbody>\n",
-       "          <tr>\n",
-       "          \n",
-       "            <td>\n",
-       "                   1\n",
-       "            </td>\n",
-       "          \n",
-       "          </tr>\n",
-       "        </tbody>\n",
-       "        </table>\n",
-       "        \n",
-       "            </td>\n",
-       "          </tr>\n",
-       "        \n",
-       "          <tr>\n",
-       "            <th>\n",
-       "            [no name]\n",
-       "            </th>\n",
-       "            <td>\n",
-       "            \n",
-       "        <span>FloatVector with 4 elements.</span>\n",
-       "        <table>\n",
-       "        <tbody>\n",
-       "          <tr>\n",
-       "          \n",
-       "            <td>\n",
-       "            0.000000\n",
-       "            </td>\n",
-       "          \n",
-       "            <td>\n",
-       "            1.000000\n",
-       "            </td>\n",
-       "          \n",
-       "            <td>\n",
-       "            3.000000\n",
-       "            </td>\n",
-       "          \n",
-       "            <td>\n",
-       "            3.000000\n",
-       "            </td>\n",
-       "          \n",
-       "          </tr>\n",
-       "        </tbody>\n",
-       "        </table>\n",
-       "        \n",
-       "            </td>\n",
-       "          </tr>\n",
-       "        \n",
-       "          <tr>\n",
-       "            <th>\n",
-       "            ...\n",
-       "            </th>\n",
-       "            <td>\n",
-       "            ...\n",
-       "            </td>\n",
-       "          </tr>\n",
-       "        \n",
-       "          <tr>\n",
-       "            <th>\n",
-       "            [no name]\n",
-       "            </th>\n",
-       "            <td>\n",
-       "            <rpy2.rinterface_lib.sexp.NULLType object at 0x00000138BCC6B450> [0]\n",
-       "            </td>\n",
-       "          </tr>\n",
-       "        \n",
-       "          <tr>\n",
-       "            <th>\n",
-       "            [no name]\n",
-       "            </th>\n",
-       "            <td>\n",
-       "            \n",
-       "        <span>ListVector with 4 elements.</span>\n",
-       "        <table>\n",
-       "        <tbody>\n",
-       "        \n",
-       "          <tr>\n",
-       "            <th>\n",
-       "            [no name]\n",
-       "            </th>\n",
-       "            <td>\n",
-       "            <rpy2.rinterface.FloatSexpVector object at 0x00000138C5F0D190> [14]\n",
-       "            </td>\n",
-       "          </tr>\n",
-       "        \n",
-       "          <tr>\n",
-       "            <th>\n",
-       "            [no name]\n",
-       "            </th>\n",
-       "            <td>\n",
-       "            <rpy2.rinterface.ListSexpVector object at 0x00000138C5F0FDD0> [19]\n",
-       "            </td>\n",
-       "          </tr>\n",
-       "        \n",
-       "          <tr>\n",
-       "            <th>\n",
-       "            [no name]\n",
-       "            </th>\n",
-       "            <td>\n",
-       "            <rpy2.rinterface.ListSexpVector object at 0x00000138C5F0F9D0> [19]\n",
-       "            </td>\n",
-       "          </tr>\n",
-       "        \n",
-       "          <tr>\n",
-       "            <th>\n",
-       "            [no name]\n",
-       "            </th>\n",
-       "            <td>\n",
-       "            <rpy2.rinterface.ListSexpVector object at 0x00000138C5F0FAD0> [19]\n",
-       "            </td>\n",
-       "          </tr>\n",
-       "        \n",
-       "        </tbody>\n",
-       "        </table>\n",
-       "        \n",
-       "            </td>\n",
-       "          </tr>\n",
-       "        \n",
-       "          <tr>\n",
-       "            <th>\n",
-       "            [no name]\n",
-       "            </th>\n",
-       "            <td>\n",
-       "            <environment: 0x00000138c30aee18>\n",
-       "\n",
-       "            </td>\n",
-       "          </tr>\n",
-       "        \n",
-       "        </tbody>\n",
-       "        </table>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<rpy2.robjects.vectors.ListVector object at 0x00000138C5F25FD0> [19]\n",
-       "R classes: ('igraph',)\n",
-       "[FloatSexp..., BoolSexpV..., FloatSexp..., FloatSexp..., ..., NULLType, NULLType, ListSexpV..., SexpEnvir...]\n",
-       "  <no name>: <class 'rpy2.robjects.vectors.FloatVector'>\n",
-       "  <rpy2.robjects.vectors.FloatVector object at 0x00000138C74DA750> [14]\n",
-       "R classes: ('numeric',)\n",
-       "[4.000000]\n",
-       "  <no name>: <class 'rpy2.robjects.vectors.BoolVector'>\n",
-       "  <rpy2.robjects.vectors.BoolVector object at 0x00000138C5F250D0> [10]\n",
-       "R classes: ('logical',)\n",
-       "[       1]\n",
-       "  <no name>: <class 'rpy2.robjects.vectors.FloatVector'>\n",
-       "  <rpy2.robjects.vectors.FloatVector object at 0x00000138C5F0FA50> [14]\n",
-       "R classes: ('numeric',)\n",
-       "[0.000000, 1.000000, 3.000000, 3.000000]\n",
-       "  <no name>: <class 'rpy2.robjects.vectors.FloatVector'>\n",
-       "  <rpy2.robjects.vectors.FloatVector object at 0x00000138C5F0F250> [14]\n",
-       "R classes: ('numeric',)\n",
-       "[1.000000, 2.000000, 1.000000, 2.000000]\n",
-       "...\n",
-       "  <no name>: <class 'rpy2.rinterface_lib.sexp.NULLType'>\n",
-       "  <rpy2.rinterface_lib.sexp.NULLType object at 0x00000138BCC6B450> [0]\n",
-       "  <no name>: <class 'rpy2.rinterface_lib.sexp.NULLType'>\n",
-       "  <rpy2.rinterface_lib.sexp.NULLType object at 0x00000138BCC6B450> [0]\n",
-       "<rpy2.robjects.vectors.ListVector object at 0x00000138C5F25FD0> [19]\n",
-       "R classes: ('igraph',)\n",
-       "[FloatSexp..., BoolSexpV..., FloatSexp..., FloatSexp..., ..., NULLType, NULLType, ListSexpV..., SexpEnvir...]\n",
-       "  <no name>: <class 'rpy2.robjects.environments.Environment'>\n",
-       "  <rpy2.robjects.environments.Environment object at 0x00000138C5F0F750> [4]\n",
-       "R classes: ('environment',)\n",
-       "n items: 4"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "graph = define_graph(\n",
-    "    graph_str=\"(Z -+ X, X -+ Y, Ur -+ X, Ur -+ Y)\",\n",
-    "    leftside=[1, 0, 0, 0],\n",
-    "    latent=[0, 0, 0, 1],\n",
-    "    nvals=[2, 2, 2, 2],\n",
-    "    rlconnect=[0, 0, 0, 0],\n",
-    "    monotone=[0, 0, 0, 0]\n",
-    ")\n",
-    "graph"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "176e4013",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bounds from causaloptim: [<rpy2.robjects.vectors.FloatVector object at 0x00000138C5F0C6D0> [14]\n",
-      "R classes: ('numeric',)\n",
-      "[-0.159200], <rpy2.robjects.vectors.FloatVector object at 0x00000138C5F0DE50> [14]\n",
-      "R classes: ('numeric',)\n",
-      "[0.519600]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# R code for causal graph and bounds\n",
-    "r_code = \"\"\"\n",
-    "library(causaloptim)\n",
-    "library(igraph)\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Analyze causal effect\n",
-    "riskdiff <- \"p{Y(X = 1) = 1} - p{Y(X = 0) = 1}\"\n",
-    "obj <- analyze_graph(graph, constraints = NULL, effectt = riskdiff)\n",
-    "bounds <- optimize_effect_2(obj)\n",
-    "boundsfunc <- interpret_bounds(bounds = bounds$bounds, obj$parameters)\n",
-    "\n",
-    "# Evaluate bounds\n",
-    "ATE_bounds <- boundsfunc(\n",
-    "  p00_0 = p00_0, p00_1 = p00_1,\n",
-    "  p10_0 = p10_0, p10_1 = p10_1,\n",
-    "  p01_0 = p01_0, p01_1 = p01_1,\n",
-    "  p11_0 = p11_0, p11_1 = p11_1\n",
-    ")\n",
-    "\n",
-    "ATE_bounds\n",
-    "\"\"\"\n",
-    "\n",
-    "# Run R code and extract bounds\n",
-    "robjects.r(r_code)\n",
-    "ATE_bounds = robjects.r('ATE_bounds')\n",
-    "print(\"Bounds from causaloptim:\", list(ATE_bounds))"
    ]
   }
  ],
