--- a/causauloptim_py/IV_Scenario.ipynb
+++ b/causauloptim_py/IV_Scenario.ipynb
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "465ac0c5",
    "metadata": {},
    "outputs": [
@@ -417,8 +417,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True ATE: 0.4456\n",
-      "Bounds: [0.2585, 0.7613]\n"
+      "True ATE: 0.0289\n",
+      "Bounds: [-0.0697, -0.0696]\n"
      ]
     }
    ],
@@ -480,7 +480,8 @@
     "    }\n",
     "\n",
     "sim = simulate_deterministic_data_with_probabilistic_ate(\n",
-    "    b_X_Y=np.exp(20),  # test impact\n",
+    "    b_X_Y=1,  # test impact\n",
+    "    intercept_Y= -5,\n",
     "    seed=1234\n",
     ")\n",
     "\n",
