update binaryIV Dataframe

--- a/binaryIV/binaryIV_causaloptim.ipynb
+++ b/binaryIV/binaryIV_causaloptim.ipynb
@@ -536,6 +536,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "ccabe5d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    1995.000000\n",
+       "mean        0.692158\n",
+       "std         0.001410\n",
+       "min         0.680292\n",
+       "25%         0.691795\n",
+       "50%         0.692755\n",
+       "75%         0.693019\n",
+       "max         0.693147\n",
+       "Name: entropy_U, dtype: float64"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "valid_df.entropy_U.describe()\n",
+    "## entropy of confounder has max of 0.7"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 162,
    "id": "6d0ac34b",
    "metadata": {},
