--- a/binaryIV/binaryIV_causaloptim.ipynb
+++ b/binaryIV/binaryIV_causaloptim.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": null,
    "id": "166136ee",
    "metadata": {},
    "outputs": [
@@ -1058,10 +1058,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 1,
    "id": "f1ba9e06",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df_results' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m### safe df valid to file \u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# df_results.to_csv('binaryIV_causaloptim-bounds.csv', index=False)\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[43mdf_results\u001b[49m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m### safe without _smooth and with causaloptim_ prefix\u001b[39;00m\n\u001b[0;32m      5\u001b[0m df_safe \u001b[38;5;241m=\u001b[39m df_results\u001b[38;5;241m.\u001b[39mcopy()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df_results' is not defined"
+     ]
+    }
+   ],
    "source": [
     "### safe df valid to file \n",
     "# df_results.to_csv('binaryIV_causaloptim-bounds.csv', index=False)\n",
@@ -1072,6 +1084,9 @@
     "# Drop columns only if they exist\n",
     "columns_to_drop = ['ATE_true_smooth', 'bound_lower_smooth', 'bound_upper_smooth', 'bound_width_smooth']\n",
     "df_safe = df_safe.drop(columns=[col for col in columns_to_drop if col in df_safe.columns])\n",
+    "\n",
+    "# Rename columns\n",
+    "df_safe.rename(columns=lambda x: x.replace('bound_', 'causaloptim_bound_'), inplace=True)\n",
     "\n",
     "df_safe.to_csv('binaryIV_causaloptim-bounds.csv', index=False)"
    ]
