safe data to pickle (causaloptim)

--- a/binaryIV/2SLS.ipynb
+++ b/binaryIV/2SLS.ipynb
@@ -134,13 +134,79 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 146,
+   "id": "d7606367",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv('binaryIV_causaloptim-bounds.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27dfc9d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CI_level = 0.985\n",
+    "results = []\n",
+    "for idx, observation in data.iterrows():  # Use np.arange for 0.5 steps\n",
+    "    sim = simulate_deterministic_data_with_probabilistic_ate(\n",
+    "        b_X_Y = b_X_Y\n",
+    "        # b_Z = np.random.normal(0, 1)\n",
+    "    )\n",
+    "    df = pd.DataFrame({'Y': sim['Y'], 'X': sim['X'], 'Z': sim['Z']})\n",
+    "\n",
+    "    # Add a constant term for the exogenous variables\n",
+    "    df['const'] = 1  # Adding a constant column\n",
+    "\n",
+    "    # Define the dependent variable (Y), endogenous variable (X), exogenous variable (constant), and instrument (Z)\n",
+    "    dependent = df['Y']\n",
+    "    endog = df['X']\n",
+    "    exog = df[['const']]  # Exogenous variables (constant term)\n",
+    "    instruments = df['Z']\n",
+    "\n",
+    "    # Perform 2SLS regression\n",
+    "    model = IV2SLS(dependent, exog, endog, instruments).fit()\n",
+    "\n",
+    "    CI_lower = model.conf_int(level=CI_level).loc['X']['lower']\n",
+    "    CI_upper =  model.conf_int(level=CI_level).loc['X']['upper']\n",
+    "\n",
+    "    CI_valid = CI_lower <= sim['ATE_true'] <= CI_upper\n",
+    "\n",
+    "    results.append({\n",
+    "        'b_X_Y': sim['b_X_Y'],\n",
+    "        'b_Z': sim['b_Z'],\n",
+    "        'b_U_X': sim['b_U_X'],\n",
+    "        'b_U_Y': sim['b_U_Y'],\n",
+    "        'entropy_Y': entropy_of_array(sim['Y']),\n",
+    "        'entropy_X': entropy_of_array(sim['X']),\n",
+    "        'entropy_Z': entropy_of_array(sim['Z']),\n",
+    "        'entropy_U': entropy_of_array(sim['U']),\n",
+    "        'corr_X_Y': np.corrcoef(sim['X'], sim['Y'])[0, 1],\n",
+    "        'corr_X_Z': np.corrcoef(sim['X'], sim['Z'])[0, 1],\n",
+    "        'corr_Y_Z': np.corrcoef(sim['Y'], sim['Z'])[0, 1],\n",
+    "        'ATE_true': sim['ATE_true'],\n",
+    "        '2SLS_estimation': model.params['X'],\n",
+    "        '2SLS_CI_lower': CI_lower,\n",
+    "        '2SLS_CI_upper': CI_upper,\n",
+    "        '2SLS_CI_width': CI_upper - CI_lower,\n",
+    "        '2SLS_CI_valid': CI_valid\n",
+    "    })\n",
+    "\n",
+    "\n",
+    "df_results = pd.DataFrame(results)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "fe2287d5",
    "metadata": {},
    "outputs": [],
    "source": [
     "CI_level = 0.985\n",
-    "\n",
     "results = []\n",
     "for b_X_Y in np.arange(-5, 5, 0.005):  # Use np.arange for 0.5 steps\n",
     "    sim = simulate_deterministic_data_with_probabilistic_ate(\n",
